--- a/content/about.njk
+++ b/content/about.njk
@@ -1,12 +1,12 @@
 ---
 title: About
-description: There is a rustling noise from behind a bush and you go to investigate. Amidst the leaves, a pair of mischievous brown eyes meet yours. Slowly, a woman emerges from the undergrowth, adorned with tangled brown and blonde hair and grubby gardening attire. You get a waft of earth and soap as she extends her hand in greeting.
 eleventyNavigation:
-  key: About
-  emoji: <span class="emoji" aria-hidden="true">💁🏻‍♀️</span>
-  order: 1
+	key: About
+	emoji: <span class="emoji" aria-hidden="true">💁🏻‍♀️</span>
+	order: 1
 ---
-{% extends 'structure/templates/page-3col.njk'%}
+{% extends 'structure/templates/page-full.njk'%}
+{% import "structure/components/components.njk" as macro with context %}
 
 {%- block left -%}
 {%- endblock -%}
@@ -15,19 +15,139 @@ eleventyNavigation:
 {%- block main -%}
 <section>
 	<div class="reading-width">
-		<p><span class="emoji" role="img" aria-label="Wave">👋</span> Hey! I'm a 30ish y/o frontend dev based in Wales, UK. My pronouns are she/her.</p>
+		<p><span class="emoji" role="img" aria-label="Wave">👋</span>
+			Hey! I'm the webmaster around here, you can call me Frills.</p>
 
-		<h2>Some things about me</h2>
-		<ul>
-			<li>🐶 I have an adorable canine companion, Orla! She's a lovely champagne (pale yellow) working Labrador, she has so many beans. She's the happiest pup when she's with one of her top 10 favorite humans, exploring the great outdoors, or frolicking in tall grass!</li>
-			<li>🏠 I am incredibly lucky to be a homeowner, and have my own garden where I grow vegetables and (mostly inherited) roses.</li>
-			<li>🎮 I love cozy and heartwarming games that I can play on my Steam Deck. Titles like Stardew Valley, It Takes Two, and Garden Galaxy have become my new go-tos. I bid farewell to a decade-long love affair with first-person-shooter games (<a href="https://overwatch.blizzard.com/en-gb/career/Frills-2772/" target="_blank">Mercy main in Overwatch</a> and Killjoy main in Valorant) in December 2022.
-			<li>🥰 My absolute, all-time favorite game? It has to be <a href="https://store.steampowered.com/app/600990/The_Gardens_Between/" target="_blank">The Gardens Between</a>, a nostalgic game about friendship and growing up, created in a beautiful art style and with a very fun timey-wimey mechanic.</
-			li>
-			<li>🥕 I have been vegetarian since July 2020, a long term dream enabled by the break in social norms during Lockdown.</li>
-		</ul>
 	</div>
 </section>
+
+<div class="dashboard">
+	<article class="dashboard__item --box">
+		<header>
+			<h2>🙍🏻‍♀️ Profile</h2>
+		</header>
+		<div>
+			<ul>
+				<li>she/her</li>
+				<li>Millenial</li>
+				<li>Engaged</li>
+				<li>Wales, UK</li>
+				<li>Frontend developer</li>
+			</ul>
+		</div>
+	</article>
+	<article class="dashboard__item --box">
+		<header>
+			<h2>👯‍♀️ Social</h2>
+		</header>
+		<div>
+			<ul class="unstyled">
+				<li><span class="emoji" role="img" aria-label="Coffee">☕️</span> <a href="https://status.cafe/users/fri11s">@fri11s@status.cafe</a></li>
+				<li><span class="emoji" role="img" aria-label="Cat">😺</span> <a href="https://neocities.org/site/fri11s">@fri11s@neocities.org</a></li>
+				<li><span class="emoji" role="img" aria-label="Elephant">🐘</span> <a href="https://cutie.city/@frills">@frills@cutie.city</a></li>
+			</ul>
+		</div>
+	</article>
+	<article class="dashboard__item --box">
+		<header>
+			<h2>✨ Personality</h2>
+		</header>
+		<div>
+			<ul>
+				<li>Gemini sun</li>
+				<li>Gemini rising</li>
+				<li>Scorpio moon</li>
+				<li>INFP</li>
+			</ul>
+		</div>
+	</article>
+	<article class="dashboard__item --box">
+		<header>
+			<h2>💖 Pseudonym</h2>
+		</header>
+		<div>
+			<p>Where's the name from? Well, once upon a time, I made a gnome mage on the Azune EU server on World of Warcraft. Her name was Frills. We travelled Azeroth together for years, then she lay dormant until her name was resurrected as my online presence.</p>
+			<p>I'll make a shrine to her one day.</p>
+		</div>
+	</article>
+	<article class="dashboard__item --box">
+		<header>
+			<h2>🗣 Languages</h2>
+		</header>
+		<div>
+			<ul>
+				<li>English</li>
+				<li>Welsh (beginner)</li>
+			</ul>
+		</div>
+	</article>
+	<article class="dashboard__item --box">
+		<header>
+			<h2>🍝 Food</h2>
+		</header>
+		<div>
+			<ul>
+				<li>Vegetarian</li>
+				<li>Oat milk</li>
+				<li><a href="/blog/230928-vegan-banana-bread/">Banana bread</a></li>
+				<li>Blueberries</li>
+				<li>Katsu curry</li>
+			</ul>
+		</div>
+	</article>
+	<article class="dashboard__item --box">
+		<header>
+			<h2>📚 Books</h2>
+		</header>
+		<div>
+			<ul>
+				<li>The Priory of the Orange Tree</li>
+				<li>Circe</li>
+				<li>Ready Player One</li>
+				<li>Children of Blood & Bone</li>
+				<li>Red Queen</li>
+			</ul>
+		</div>
+	</article>
+	<article class="dashboard__item --box">
+		<header>
+			<h2>🎮 Games</h2>
+		</header>
+		<div>
+			<ul>
+				<li>The Gardens Between</li>
+				<li>Stardew Valley</li>
+				<li>It Takes Two</li>
+				<li>Piffle</li>
+			</ul>
+		</div>
+	</article>
+	<article class="dashboard__item --box">
+		<header>
+			<h2>🧠 Interests</h2>
+		</header>
+		<div>
+			<ul>
+				<li>Mythology</li>
+				<li>Sea dipping</li>
+				<li>Growing veggies</li>
+				<li>Drawing</li>
+				<li>DIY and decorating</li>
+			</ul>
+		</div>
+	</article>
+	{# <article class="dashboard__item --box">
+		<header>
+			<h2>💬 Quote</h2>
+		</header>
+		<div>
+			<blockquote>
+				<p>All the days you get to have are big</p>
+				<footer>I Do This All The Time - Self Esteem</footer>
+			</blockquote>
+		</div>
+	</article> #}
+</div>
 
 {# TODO: make this accessible
 <section>
@@ -80,12 +200,8 @@ eleventyNavigation:
 {%- endblock -%}
 
 {%- block right -%}
-	<h2>Social</h2>
-	<ul class="unstyled">
-		<li><span class="emoji" role="img" aria-label="Coffee">☕️</span> <a href="https://status.cafe/users/fri11s">@fri11s@status.cafe</a></li>
-		<li><span class="emoji" role="img" aria-label="Cat">😺</span> <a href="https://neocities.org/site/fri11s">@fri11s@neocities.org</a></li>
-		<li><span class="emoji" role="img" aria-label="Elephant">🐘</span> <a href="https://cutie.city/@frills">@frills@cutie.city</a></li>
-	</ul>
+<h2>Social</h2>
+
 {%- endblock -%}
 
 
