--- a/content/not_found.njk
+++ b/content/not_found.njk
@@ -1,6 +1,5 @@
 ---
-title: 404
-draft: true
+title: 404 Page not found
 permalink: not_found.html
 eleventyExcludeFromCollections: true
 ---
@@ -13,7 +12,8 @@ eleventyExcludeFromCollections: true
 {%- block main -%}
 <section>
 	<div class="reading-width">
-		<p>Page not found</p>
+		<p>Sorry! I couldn't find that page</p>
+		<p>It might have been moved, or deleted. Try again from the <a href="/">homepage</a>.</p>
 	</div>
 </section>
 
