--- a/content/rss/rss.njk
+++ b/content/rss/rss.njk
@@ -3,7 +3,7 @@
   "permalink": "rss.xml",
   "eleventyExcludeFromCollections": true,
   "metadata": {
-    "title": "Frills' internet emporium",
+    "title": "Frills",
     "subtitle": "Personal and dev blog of Frills",
     "language": "en",
     "url": "https://fri11s.neocities.org/",
