--- a/assets/css/layout/_dashboard.css
+++ b/assets/css/layout/_dashboard.css
@@ -4,7 +4,7 @@
   width: 100%;
   font-size: 90%;
   max-width: 1000px;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .dashboard__item {
@@ -47,7 +47,8 @@
   background-image: linear-gradient(to bottom, #cd379e, #b8318e);
 }
 
-.dashboard__item.--gallery {
+.dashboard__item.--gallery,
+.gallery {
   image-rendering: crisp-edges;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
