✨ Update Orla shrine

--- a/content/shrine/orla.njk
+++ b/content/shrine/orla.njk
@@ -41,7 +41,7 @@ title: Orla
 		</header>
 		<div>
 			<ul>
-				<li>Breed: Working labrador</li>
+				<li>Breed: Working labrador retriever</li>
 				<li>Fluff colour: Champagne</li>
 				<li>Eye colour: Pale brown</li>
 			</ul>
@@ -97,8 +97,8 @@ title: Orla
 	<img src="/images/shrine/orla/walk.jpg" class="dashboard__item" alt="When I ask my dog if she wants to go for a walk, first picture is a calm sitting dog, the second picture is a blurry dog going crazy.">
 	<img src="/images/shrine/orla/orla12.jpg" class="dashboard__item" alt="Two dogs sit together outside, one is a white and brown Spanador and the other is a blonde labrador. They are both sitting waiting for a treat.">
 	<img src="/images/shrine/orla/orla13.jpg" class="dashboard__item" alt="Labrador curled up sleeping, looks like a pastry.">
-	<img src="/images/shrine/orla/orla14.jpg" class="dashboard__item" alt="Soggy labrador walks forwards with her tail held high, a big puddle is in the background.">
-	<img src="/images/shrine/orla/orla15.jpg" class="dashboard__item" alt="Labrador wearing a blue harness sits side on, looking towards the camera with a huge floppy tongue hanging out the side of her mouth.">
+	<img src="/images/shrine/orla/orla14.jpg" class="dashboard__item" alt="Labrador wearing a blue harness sits side on, looking towards the camera with a huge floppy tongue hanging out the side of her mouth.">
+	<img src="/images/shrine/orla/orla15.jpg" class="dashboard__item" alt="Soggy labrador walks forwards with her tail held high, a big puddle is in the background.">
 </div>
 
 {%- endblock -%}
