--- a/content/links.njk
+++ b/content/links.njk
@@ -27,6 +27,16 @@ eleventyNavigation:
       </a>
     </li>
     <li class="buttonwall__image">
+      <a href="https://divergentrays.com/">
+        <img src="/images/buttons/divergentrays.png" alt="Divergent Rays">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://fh102.neocities.org/">
+        <img src="/images/buttons/fh102.png" alt="fh 102">
+      </a>
+    </li>
+    <li class="buttonwall__image">
       <a href="https://fizzsea.neocities.org/">
         <img src="/images/buttons/fizzsea.png" alt="Fizzsea">
       </a>
@@ -49,6 +59,11 @@ eleventyNavigation:
     <li class="buttonwall__image">
       <a href="https://jasm1nii.xyz/">
         <img src="/images/buttons/jasmines_journal.png" alt="Jasmine's Journal">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://justfluffingaround.neocities.org/">
+        <img src="/images/buttons/justfluffingaround.png" alt="Just Fluffing Around">
       </a>
     </li>
     <li class="buttonwall__image">
@@ -117,6 +132,11 @@ eleventyNavigation:
       </a>
     </li>
     <li class="buttonwall__image">
+      <a href="https://salixx.neocities.org/">
+        <img src="/images/buttons/salixx.png" alt="Salixx">
+      </a>
+    </li>
+    <li class="buttonwall__image">
       <a href="https://sanguineroyal.com/">
         <img src="/images/buttons/sanguineroyal.png" alt="Sanguine Royal">
       </a>
@@ -129,6 +149,16 @@ eleventyNavigation:
     <li class="buttonwall__image">
       <a href="https://solaria.neocities.org/">
         <img src="/images/buttons/solaria.png" alt="Solaria">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://soyatoast.neocities.org/">
+        <img src="/images/buttons/soyatoast.png" alt="Soya Toast">
+      </a>
+    </li>
+    <li class="buttonwall__image">
+      <a href="https://whiona.me/">
+        <img src="/images/buttons/whiona.png" alt="Whiona">
       </a>
     </li>
     <li class="buttonwall__image">
@@ -147,6 +177,9 @@ eleventyNavigation:
     </li>
     <li class="buttonwall__item">
       <a href="https://kittygiraudel.com/" style="font-size: 11px; background-color: #d97eb4; color: #222222;">Kitty Giraudel</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://lolabee.neocities.org/" style="font-size: 13px; background-color: #facbd8; color: #4f3d46;">lolabee</a>
     </li>
     <li class="buttonwall__item">
       <a href="https://nohappynonsense.net/" style="font-size: 10px; background-color: #fcfce3; color: black;">no happy nonsense</a>
