--- a/content/index.njk
+++ b/content/index.njk
@@ -119,9 +119,9 @@ title: Home
 			<a href="https://webring.dinhe.net/next/https://fri11s.neocities.org/" class="webring__next">Next site</a>
 		</div>
 		<div class="webring--hotline">
-			<a href="https://hotlinewebring.club/fri11s/next" class="webring__prev">Previous site</a>
+			<a href="https://hotlinewebring.club/frills/next" class="webring__prev">Previous site</a>
 			<a href="https://hotlinewebring.club/" target="_blank">hotline</a>
-			<a href="https://hotlinewebring.club/fri11s/previous" class="webring__next">Next site</a>
+			<a href="https://hotlinewebring.club/frills/previous" class="webring__next">Next site</a>
 		</div>
 		<div class="webring--neossg">
 			<div id="neossg">
