--- a/content/rss/rss.njk
+++ b/content/rss/rss.njk
@@ -6,7 +6,7 @@
     "title": "Frills",
     "subtitle": "Personal and dev blog of Frills",
     "language": "en",
-    "url": "https://fri11s.neocities.org/",
+    "url": "https://frills.dev/",
     "author": {
       "name": "Frills",
       "email": "fri11s@proton.me"
