--- a/content/rss/changelog.njk
+++ b/content/rss/changelog.njk
@@ -6,7 +6,7 @@
     "title": "Frills - Changelog",
     "subtitle": "Changelog and updates from Frills",
     "language": "en",
-    "url": "https://fri11s.neocities.org/changelog",
+    "url": "https://frills.dev/changelog",
     "author": {
       "name": "Frills",
       "email": "fri11s@proton.me"
