--- a/structure/components/button.njk
+++ b/structure/components/button.njk
@@ -11,7 +11,7 @@
 <details class="mb-1">
 	<summary>What is an SVG?</summary>
 	<div class="mt-1">
-		SVG stands for Scalabe Vector Graphic. It's an image created using lines and maths, instead of pixels. It means the image can be made tiny or massive and still retain perfect crisp lines
+		SVG stands for Scalable Vector Graphic. It's an image created using lines and maths, instead of pixels. It means the image can be made tiny or massive and still retain perfect crisp lines
 	</div>
 </details>
 <div class="mb-1">
