--- a/content/index.njk
+++ b/content/index.njk
@@ -129,6 +129,13 @@ title: Home
 				<script type="text/javascript" src="https://neossg.neocities.org/onionring-widget.js"></script>
 			</div>
 		</div>
+		{# <div class="webring--ladiesofthelink">
+				<a href="https://webri.ng/webring/ladiesofthelinks/previous?via=https%3A%2F%2Ffrills.dev" class="webring__prev">Previous Site</a>
+				<a href="https://ladiesofthe.link/">Ladies of the Links</a>
+				<a href="https://webri.ng/webring/ladiesofthelinks/random?via=https%3A%2F%2Ffrills.dev" class="webring__random">Random Site</a>
+				<a href="https://webri.ng/webring/ladiesofthelinks/next?via=https%3A%2F%2Ffrills.dev" class="webring__next">Next Site</a>
+			</table>
+		</div> #}
 	</aside>
 </div>
 {% endblock %}
