📃 Add Orla to homepage

--- a/content/index.njk
+++ b/content/index.njk
@@ -102,6 +102,14 @@ title: Home
 			'
 		)}}
 	</div>
+	<div class="dashboard__item">
+		<h2 class="visually-hidden">Shrines</h2>
+		<a href="/shrine/orla" class="gallery" aria-label="Orla (my dog) shrine">
+			<img src="/images/shrine/orla/orla1.jpg" alt="" loading="lazy">
+			<img src="/images/shrine/orla/orla14.jpg" alt="" loading="lazy">
+			<img src="/images/shrine/orla/orla15.jpg" alt="" loading="lazy">
+		</a>
+	</div>
 </div>
 {%- endblock -%}
 
