--- a/content/links.njk
+++ b/content/links.njk
@@ -17,6 +17,11 @@ eleventyNavigation:
 <section class="reading-width">
   <ul class="buttonwall">
     <li class="buttonwall__image">
+      <a href="https://pinkvampyr.leprd.space/accessiblenet/directory">
+        <img src="/images/buttons/accessiblenet.png" alt="Accessible New">
+      </a>
+    </li>
+    <li class="buttonwall__image">
       <a href="https://midifreak.online/">
         <img src="/images/buttons/coffeebug.png" alt="Coffee Bug">
       </a>
