--- a/assets/css/layout/_grid.css
+++ b/assets/css/layout/_grid.css
@@ -7,10 +7,21 @@
 @media (min-width: 768px) {
   .grid {
     grid-template-columns: 240px 2fr 1fr;
+    flex-wrap: nowrap;
+  }
+}
+@media (min-width: 1200px) {
+  .grid {
+    grid-template-columns: 240px 2fr 1fr;
   }
 }
 
 @media (min-width: 768px) {
+  .grid--header {
+    grid-template-columns: 1fr;
+  }
+}
+@media (min-width: 992px) {
   .grid--header {
     grid-template-columns: 240px 1fr 100px;
   }
@@ -18,11 +29,16 @@
 
 @media (min-width: 768px) {
   .grid--main {
+    grid-template-columns: 1fr;
+  }
+}
+@media (min-width: 992px) {
+  .grid--main {
     grid-template-columns: 240px 1fr;
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .grid--offset {
     grid-template-columns: 1fr;
     margin-left: 266px;
@@ -36,7 +52,7 @@
   flex-wrap: wrap;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 768px) {
   .content__main {
     flex-wrap: nowrap;
   }
@@ -47,10 +63,16 @@
   width: 100%;
 }
 
+@media (min-width: 768px) {
+  .content__extra {
+    flex: 1 0 200px;
+    width: 200px;
+    font-size: 80%;
+  }
+}
 @media (min-width: 1200px) {
   .content__extra {
-    flex: 1 0 auto;
+    flex: 1 0 300px;
     width: 300px;
-    font-size: 80%;
   }
 }
