💄  Update button hover and focus state

--- a/assets/css/components/_button.css
+++ b/assets/css/components/_button.css
@@ -18,8 +18,12 @@ button:hover {
   background-color: #eec900;
 }
 
+.button:hover,
+.button:focus,
 .button:active,
 .button[aria-pressed="true"],
+button:hover,
+button:focus,
 button:active,
 button[aria-pressed="true"] {
   transform: translate(4px, 4px);
