📝 Add blog post

--- a/content/guestbook.njk
+++ b/content/guestbook.njk
@@ -16,7 +16,7 @@ eleventyNavigation:
 <h1>{{title}}</h1>
 <section class="reading-width h-sm">
   <p>Hello! Thank you for stopping by. Please leave a message to say you were here or to share your website.</p>
-  <p>Be nice, all usual code of conduct rules apply and I reserve the right to delete comments.</p>
+  <p>Be nice, all usual code of conduct rules apply, comments are moderated.</p>
   <details class="pb-2">
     <summary>Code of conduct</summary>
     <div class="py-1">
