--- a/content/shrine/orla.njk
+++ b/content/shrine/orla.njk
@@ -15,12 +15,12 @@ title: Orla
 		<li><span class="emoji" role="img" aria-label="Breed">🐶</span> Labrador</li>
 		<li><span role="img" class="emoji" aria-label="Status">💩</span> Probably poopin'</li>
 	</ul>
-	{# <figure>
+	<figure>
 	<figcaption>Dream woofs</figcaption>
 		<audio controls loop>
 			<source src="/media/orla-dreamwoofs.mp3" type="audio/mpeg">
 		</audio> 
-	</figure> #}
+	</figure>
 
 </div>
 {%- endblock -%}
@@ -29,7 +29,7 @@ title: Orla
 {%- block main -%}
 <section>
 	<div class="reading-width">
-		<p>Orla is my girl. She is my baby of the fluff. My favourite person. I spend more time with her than anyone else and she never seems to get sick of me. I can't remember what life was like before she joined my family, she brings me so my joy every single day - my cup runneth over.</p>
+		<p>Orla is my girl. She is my baby of the fluff. My favourite person. I spend more time with her than anyone else and she never seems to get sick of me. I can't remember what life was like before she joined my family, she brings me so much joy every single day - my cup runneth over.</p>
 		<p>If you're human, she'll vibe check you. Once you pass, she'll love you intensely and probably pee on the floor out of excitement of seeing you. If you're a canine, check your watch, it's play'o'clock! Unless you're not into it, in which case: OK bye.</p>
 	</div>
 </section>
@@ -53,6 +53,7 @@ title: Orla
 	<img src="/images/shrine/orla/orla3.jpg" class="dashboard__item" alt="Labrador puppy lying on grass, her front paws slightly crossed and her head is tilted to the left.">
 	<img src="/images/shrine/orla/orla4.jpg" class="dashboard__item" alt="Two yellow labradors together, one is a fully grown male, led down smiling widely with a ball between his legs, the other is a small puppy sat peaking out from behind the male.">
 	<img src="/images/shrine/orla/orla5.jpg" class="dashboard__item" alt="Labrador puppy wearing a red harness at a garden centre, she has a small garden pot in her mouth which covers most of her face">
+	<img src="/images/shrine/orla/orla6.jpg" class="dashboard__item" alt="Labrador puppy sits on grass with a frisbee caught around her head and in her mouth">
 	<article class="dashboard__item --box">
 		<header>
 			<h2>✨ Personality</h2>
@@ -69,12 +70,12 @@ title: Orla
 			</ul>
 		</div>
 	</article>
-	<img src="/images/shrine/orla/orla6.jpg" class="dashboard__item" alt="Labrador puppy sits on grass with a frisbee caught around her head and in her mouth">
 	<img src="/images/shrine/orla/orla7.jpg" class="dashboard__item" alt="Small labrador puppy wearing an orange harness, her head is tilted as she is backlit with sunlight.">
 	<img src="/images/shrine/orla/orla8.jpg" class="dashboard__item" alt="Young labrador sits to the side amongst autumnal golden leaves, looking up with her mouth slightly open, waiting for a treat.">
 	<img src="/images/shrine/orla/hows-it-going.jpg" class="dashboard__item" alt="Line drawings of a person lying on the floor next to a dog with the text 'How's it going down here? Are you OK?'">
 	<img src="/images/shrine/orla/orla9.jpg" class="dashboard__item" alt="Young labrador stands proudly on small rocks with a river in the background.">
 	<img src="/images/shrine/orla/orla10.jpg" class="dashboard__item" alt="Two labradors sit together, both sit waiting for a treat, the young one which is sat closest is smiling widely.">
+	<img src="/images/shrine/orla/orla11.jpg" class="dashboard__item" alt="Labrador is led on a white duvet, she wears a dark blue neck bandana that says 'It's my birthday'">
 	<article class="dashboard__item --box">
 		<header>
 			<h2>🦴 Likes</h2>
@@ -93,12 +94,14 @@ title: Orla
 			</ul>
 		</div>
 	</article>
-	<img src="/images/shrine/orla/orla11.jpg" class="dashboard__item" alt="Labrador is led on a white duvet, she wears a dark blue neck bandana that says 'It's my birthday'">
 	<img src="/images/shrine/orla/walk.jpg" class="dashboard__item" alt="When I ask my dog if she wants to go for a walk, first picture is a calm sitting dog, the second picture is a blurry dog going crazy.">
 	<img src="/images/shrine/orla/orla12.jpg" class="dashboard__item" alt="Two dogs sit together outside, one is a white and brown Spanador and the other is a blonde labrador. They are both sitting waiting for a treat.">
 	<img src="/images/shrine/orla/orla13.jpg" class="dashboard__item" alt="Labrador curled up sleeping, looks like a pastry.">
 	<img src="/images/shrine/orla/orla14.jpg" class="dashboard__item" alt="Labrador wearing a blue harness sits side on, looking towards the camera with a huge floppy tongue hanging out the side of her mouth.">
 	<img src="/images/shrine/orla/orla15.jpg" class="dashboard__item" alt="Soggy labrador walks forwards with her tail held high, a big puddle is in the background.">
+	<video controls poster="/images/shrine/orla/orla-woods.jpg">
+		<source src="/media/orla-woods.mp4" type="video/mp4">
+	</video>
 </div>
 
 {%- endblock -%}
