--- a/content/experiments/css-ghost.njk
+++ b/content/experiments/css-ghost.njk
@@ -1,12 +1,13 @@
 ---
 title: CSS Ghost
-description: Pure CSS ghost
-date: 2023-10-31
-draft: true
+date: 2023-10-25
 ---
 
 {% block head %}
   <style>
+    * {
+        cursor: url('https://cdn.custom-cursor.com/db/10498/32/cute-ghost-cursor.png') , auto !important
+    }
     .cssghost {
         align-items: center;
         background-color: black;
@@ -17,6 +18,7 @@ draft: true
         margin: 0;
         padding: 0;
         overflow: hidden;
+        position: relative;
     }
 
     .cssghost .ghost {
@@ -48,7 +50,6 @@ draft: true
         height: 20px;
         border-radius: 15px 15px 100px 100px;
         background: black;
-        background-image: radial-gradient(circle, deeppink 20%, rgba(0,0,0,1) 22%);
         background-size: 40px;
         background-repeat: no-repeat;
         background-position: center 20px;
@@ -57,6 +58,18 @@ draft: true
         transform: translateX(-50%);
         top: 150px;
         overflow: hidden;
+        positiont: relative;
+    }
+    .cssghost .ghost .smile::before {
+        content: '';
+        width: 100%;
+        aspect-ratio: 1;
+        background-color: deeppink;
+        border-radius: 100px;
+        position: absolute;
+        top: 10px;
+        left: 50%;
+        transform: translateX(-50%);
     }
 
     .cssghost .ghost .arms::before,
@@ -108,6 +121,26 @@ draft: true
         right: 50px;
     }
 
+    .shadow {
+        background: rgba(255,255,255,0.15);
+        width: 200px;
+        height: 50px;
+        border-radius: 100%;
+        position: absolute;
+        bottom: 50px;
+        left: 50%;
+        transform: translateX(-50%);
+        animation: shadow 3s ease-in-out forwards alternate infinite;
+    }
+
+    @keyframes shadow {
+        0% {
+            transform: translateX(-50%) scale(0.9);
+        }
+        100% {
+            transform: translateX(-50%) scale(1.1);
+        }
+    }
     @keyframes hover {
         0% {
             transform: translateY(-10px);
@@ -138,11 +171,24 @@ draft: true
 {% endblock %}
 
 {% block main %}
+<div class="reading-width h-sm">
+    <p>Pure CSS ghost created for the <a href="https://32bit.mysteryslug.com/events/halloween-2023/">32bit.cafe Halloween 2023 challenge</a>.</p>
+    <h2>Other 32bit.cafe submissions</h2>
+    <ul>
+        <li><a href="https://ribo.zone/graveyard">Link graveyard by Ribo.zone</a></li>
+        <li><a href="https://divergentrays.com/trickortreat">Trick or Treat by Divergent Rays</a></li>
+</div>
+
 <div class="cssghost">
   <div class="ghost">
     <div class="eyes"></div>
     <div class="smile"></div>
     <div class="arms"></div>
   </div>
+  <div class="shadow"></div>
+</div>
+
+<div class="reading-width">
+    <p>Depicts a cute round ghost with huge shiny eyes and an open smile (you can see his pink tongue!). Animated to hover up and a down with his arms moving slightly and a shadow underneath.</p>
 </div>
 {% endblock %}
