👻 Update CSS ghost

--- a/content/experiments/css-ghost.njk
+++ b/content/experiments/css-ghost.njk
@@ -15,7 +15,7 @@ date: 2023-10-25
         height: 100vh;
         min-height: 550px;
         justify-content: center;
-        margin: 0;
+        margin: 0 0 2rem 0;
         padding: 0;
         overflow: hidden;
         position: relative;
