--- a/content/index.njk
+++ b/content/index.njk
@@ -55,6 +55,13 @@ title: Home
 			<img src="/images/piclog/piclog1.jpg" alt="The sun rises through the clouds over the sea with people walking out of the sea." loading="lazy">
 		</figure>
 	</article>
+	<article class="dashboard__item --neocities">
+		<img src="/images/neocities.svg" alt="Neocities cat holding a paintbrush and spanner">
+		<div>
+			<a href="https://neocities.org/site/fri11s">Neocities profile</a>
+			<p class="small">Follow me for updates!</p>
+		</div>
+	</article>
 	<article class="dashboard__item --spotify noscriptHide">
 		<h2 class="visually-hidden">Spotify playlist</h2>
 		<iframe title="Frills' On Repeat playlist on Spotify" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpuSqLqrl1FPT?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
